Basic swagger doc has been updated. Mongo repo added. Get all listings working.
